[package]
authors = ["Ingvar Stepanyan <me@rreverser.com>, Sardorbek Pulatov <sardo@hey.com>"]
description = "xml-rs based deserializer for Serde (compatible with 0.9+)"
license = "MIT"
name = "serde-xml-new"
repository = "https://github.com/ParisOrg/serde-xml-new"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = "1.0"
xml-rs = "0.8"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.1"
docmatic = "0.1"
rstest = "0.17"
